Bug 184312 - images are scaled using FastTransform instead of SmoothTransform
Summary: images are scaled using FastTransform instead of SmoothTransform
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-WebService-Flickr (other bugs)
Version First Reported In: 5.6.0
Platform: Ubuntu Unspecified
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-14 14:51 UTC by Matthias Welwarsky
Modified: 2018-03-23 11:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.2.0
Sentry Crash Report:


Attachments
patch to use QImage.scaled with SmoothTransform mode (1.13 KB, patch)
2009-02-14 14:55 UTC, Matthias Welwarsky
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matthias Welwarsky 2009-02-14 14:51:41 UTC
Version:            (using KDE 4.2.0)
Installed from:    Ubuntu Packages

When downscaling images before upload to flickr, QImage.scale() is used with default transformation mode, FastTransform. This creates ugly artifacts in downscaled images due to pixel aliasing effects. SmoothTransform should be used instead.
Comment 1 Matthias Welwarsky 2009-02-14 14:55:48 UTC
Created attachment 31293 [details]
patch to use QImage.scaled with SmoothTransform mode

I propose the attached patch to fix the bug
Comment 2 caulier.gilles 2009-02-16 08:07:20 UTC
Luka,

This patch is true for flickr. Perhaps it's also right with others plugins as PicasaWeb, FaceBook, Smug, etc... Can you take a look ? Thanks in advance...

Gilles
Comment 3 Luka Renko 2009-02-16 09:44:51 UTC
SVN commit 926795 by lure:

Use Qt::SmoothTransform when image is resized. This is fixed for Calendar,
Advanced Slideshow, GalleryExport, FlashExport, FlickrExport, Facebook and 
SmugMug plugins.

Thanks to Matthias Welwarsky for noticing this and proposing patch.

BUG: 184312


 M  +10 -0     NEWS  
 M  +1 -1      advancedslideshow/imageloadthread.cpp  
 M  +1 -1      advancedslideshow/slideshowloader.cpp  
 M  +1 -1      calendar/calpainter.cpp  
 M  +2 -1      facebook/fbwindow.cpp  
 M  +2 -1      flickrexport/flickrtalker.cpp  
 M  +2 -1      galleryexport/gallerytalker.cpp  
 M  +2 -1      simpleviewerexport/simpleviewerexport.cpp  
 M  +2 -1      smug/smugwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=926795