Use Qt::SmoothTransform when image is resized. This is fixed for Calendar, Advanced Slideshow, GalleryExport, FlashExport, FlickrExport, Facebook and SmugMug plugins.

Thanks to Matthias Welwarsky for noticing this and proposing patch.

BUG: 184312

svn path=/trunk/extragear/graphics/kipi-plugins/; revision=926795