advancedslideshow/slideshowloader.cpp
@@ -91,7 +91,7 @@ void LoadThread::run()
     }
 
 
-    newImage = newImage.scaled(m_swidth, m_sheight, Qt::KeepAspectRatio);
+    newImage = newImage.scaled(m_swidth, m_sheight, Qt::KeepAspectRatio, Qt::SmoothTransformation);
 
     m_imageLock->lock();
     m_loadedImages->insert(m_path, newImage);
