flickrexport/flickrtalker.cpp
@@ -501,7 +501,8 @@ bool FlickrTalker::addPhoto(const QString& photoPath, const FPhotoInfo& info,
         path = KStandardDirs::locateLocal("tmp", QFileInfo(photoPath).baseName().trimmed() + ".jpg");
 
         if (rescale && (image.width() > maxDim || image.height() > maxDim))
-            image = image.scaled(maxDim, maxDim, Qt::KeepAspectRatio);
+            image = image.scaled(maxDim, maxDim, Qt::KeepAspectRatio, 
+                                                 Qt::SmoothTransformation);
 
         image.save(path, "JPEG", imageQuality);
 
